deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafe-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafe-web
  template:
    metadata:
      labels:
        app: cafe-web
    spec:
      containers:
      - name: cafe-web
        image: jdzaky/cafe-web:v1.1
        ports:
        - containerPort: 80
