service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cafe-web 
spec:
  selector:
    app: cafe-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
