ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-web-ingress
spec:
  rules:
  - host: localhost   
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cafe-web
            port:
              number: 80
